:art: Move indieweb inline to avoid invisible metadata

--- a/static/global.css
+++ b/static/global.css
@@ -136,7 +136,3 @@ h6::before {
   font-weight: 200;
 }
 
-.hidden {
-  display: none;
-}
-
